- AuthorizationToken extended with roles and preferred_username. Admin-Gui shows the preferred_username if available. - LdapAuthenticationProvider improved to change the NetBIOS form domain\username into `user principal name`. - DurationUtils to format a Duration type to human-readable form. - AuthApi moved to spvitamin-spring-security - spvitamin-spring-security-authservice-api removed